tried naive x = PSI^H s implementation, it's not the one

--- a/dataReaderMITDB.ipynb
+++ b/dataReaderMITDB.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [
     {
@@ -482,15 +482,259 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Wavelet basis\n",
+    "\n",
+    "THEORY MISSING\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Best Choice of Wavelet Type for ECG Signal Processing\n",
+    "\n",
+    "When selecting a wavelet type for ECG signal processing, the choice largely depends on the specific application, such as noise reduction, feature extraction, or data compression. However, certain wavelets have shown to be particularly effective for ECG signals due to their similarity to ECG waveform characteristics. Below are some commonly used wavelet types:\n",
+    "\n",
+    "1. Daubechies Wavelets (db4, db6, etc.)\n",
+    "    - **Best for:** General ECG analysis, particularly for detecting QRS complexes.\n",
+    "    - **Rationale:** Daubechies wavelets have a good balance between time and frequency localization, making them effective for detecting sharp transitions like QRS complexes in ECG signals.\n",
+    "\n",
+    "2. Symlet Wavelets (sym4, sym5, etc.)\n",
+    "    - **Best for:** Noise reduction and feature extraction.\n",
+    "    - **Rationale:** Symlets are nearly symmetric, which helps in preserving the waveform's morphology during decomposition and reconstruction, making them suitable for ECG denoising.\n",
+    "\n",
+    "3. Coiflet Wavelets (coif5, etc.)\n",
+    "    - **Best for:** Detailed feature extraction.\n",
+    "    - **Rationale:** Coiflets provide a higher number of vanishing moments, which helps in better capturing the finer details of ECG signals.\n",
+    "\n",
+    "4. Biorthogonal Wavelets (bior3.7, bior4.4, etc.)\n",
+    "    - **Best for:** Denoising and signal compression.\n",
+    "    - **Rationale:** Biorthogonal wavelets provide symmetric decomposition and reconstruction, which is beneficial in preserving the integrity of the ECG waveform during processing.\n",
+    "\n",
+    "5. Meyer Wavelet\n",
+    "    - **Best for:** Feature extraction in a broader frequency spectrum.\n",
+    "    - **Rationale:** Meyer wavelets are well-suited for capturing both low and high-frequency components, which can be useful for detecting various features in ECG signals.\n",
+    "\n",
+    "6. Haar Wavelet\n",
+    "    - **Best for:** Simple applications requiring high computational efficiency.\n",
+    "    - **Rationale:** Haar wavelets are simple and computationally efficient but may not capture subtle features as effectively as other wavelets. They are mainly used for applications where simplicity and speed are prioritized over detail.\n",
+    "\n",
+    "#### Recommendation\n",
+    "For most ECG processing tasks, **Daubechies wavelets** (particularly db4 or db6) are often the preferred choice due to their effective balance between capturing the necessary detail and computational efficiency. However, if your application requires more detailed feature extraction or noise reduction, you might consider Symlets or Coiflets. \n",
+    "\n",
+    "Always validate the choice of wavelet with your specific dataset and application to ensure optimal performance.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Select signal block to compress\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# portion of signal to be reduced\n",
+    "size = 16\n",
+    "\n",
+    "# measurement matrix will reduce 'size' samples to 'rows' compressed samples\n",
+    "rows = 4 \n",
+    "\n",
+    "\n",
+    "# Let's select as signal 1024 samples from MLII, choosing a starting sample for the block\n",
+    "start_sample = 300\n",
+    "signal_block = df['MLII'].iloc[start_sample:start_sample + size].values\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 1: sparse representation\n",
+    "\n",
+    "__Compressed sensing__ (recap in a nutshell)\n",
+    "$$\n",
+    "y = \\Phi x = \\Phi (\\Psi^H s)\n",
+    "$$\n",
+    "\n",
+    "__Sparse representation step__\n",
+    "$$\n",
+    "x = \\Psi^H s\n",
+    "$$\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Naive implementation:__\n",
+    "\n",
+    "Naive implementation is to actually compute $\\Psi$ orthogonal wavelet basis matrix (fixed dictionary), compute hermitian conjugate $\\Psi^H$, at the end compute the dot product $x = \\Psi^H s$. This is __NOT__ computationally the best solution, as it is unnecessary to compute and store $\\Psi$ and unnecesary and potentiall really expensive to compute $\\Psi^H$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-0.275 -0.27  -0.25  -0.25  -0.255 -0.225 -0.22  -0.205 -0.2   -0.205\n",
+      " -0.215 -0.23  -0.22  -0.225 -0.225 -0.225]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/franco/Dropbox/AA_Fra_Rosnati/B_Education/AA_University/AA_PoliMi/AA_Ing/01_Magistrale/HPC_engineering/1_sem_HPC/NAML/NAML_project/NAML_ECG_compressor/.namlVenv/lib/python3.8/site-packages/pywt/_multilevel.py:43: UserWarning: Level value of 4 is too high: all coefficients will experience boundary effects.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pywt\n",
+    "\n",
+    "def generate_wavelet_basis_matrix(signal_length, wavelet_name='db4', levelsNum=None):\n",
+    "\n",
+    "    if levelsNum is None:\n",
+    "        levelsNum = int(np.log2(signal_length))\n",
+    "\n",
+    "\n",
+    "    # Generate an identity matrix as the input signal for each basis vector\n",
+    "    identity_matrix = np.identity(signal_length)\n",
+    "    \n",
+    "    # Initialize a matrix to store the wavelet basis vectors\n",
+    "    basis_matrix = np.zeros((signal_length, signal_length))\n",
+    "    \n",
+    "    # Choose numb\n",
+    "\n",
+    "    # Perform the wavelet transform on each unit vector    \n",
+    "    for i in range(signal_length):\n",
+    "        coeffs = pywt.wavedec(identity_matrix[i], wavelet_name, level=levelsNum)\n",
+    "        \n",
+    "        # Reconstruct the basis vector from wavelet coefficients\n",
+    "        reconstructed_signal = pywt.waverec(coeffs, wavelet_name)\n",
+    "        \n",
+    "        # Store the reconstructed signal (which is a basis vector) in the matrix\n",
+    "        basis_matrix[i] = reconstructed_signal[:signal_length]  # trim to original length\n",
+    "    \n",
+    "    return basis_matrix\n",
+    "\n",
+    "# Generate Ψ\n",
+    "Psi = generate_wavelet_basis_matrix(size)\n",
+    "\n",
+    "# Compute sparse representation of the signal\n",
+    "x_naive = np.dot(np.conj(Psi.T), signal_block)\n",
+    "\n",
+    "\n",
+    "print(x_naive)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Computationally cheaper implementation:__\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-3.49008644e-01 -3.61412369e-01 -3.91673805e-01 -3.71393951e-01\n",
+      " -3.60463303e-01 -3.26191883e-01 -2.89397027e-01 -2.92628122e-01\n",
+      " -3.16314102e-01 -3.17099149e-01 -3.18314234e-01  2.96756660e-03\n",
+      "  8.02451166e-03 -1.28113856e-02 -3.63110956e-03  6.67842673e-04\n",
+      " -8.04029625e-04  1.02498825e-02 -1.68927437e-03  2.12647950e-04\n",
+      " -1.20487608e-03 -9.03241483e-03]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def compute_dwt_coefficients(signal, signal_length, wavelet_name='db4', levelsNum=None):\n",
+    "    \"\"\"\n",
+    "    Computes the DWT coefficients for the given signal block.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    - signal: array-like, the input signal block (e.g., 16 samples)\n",
+    "    - signal_length: int, the length of the signal block (should match len(signal))\n",
+    "    - wavelet_name: str, name of the wavelet to use (default is 'db4')\n",
+    "\n",
+    "    Returns:\n",
+    "    - x_dwt: array-like, the DWT coefficients of the signal block\n",
+    "    \"\"\"\n",
+    "\n",
+    "    if levelsNum is None:\n",
+    "        levelsNum = int(np.log2(signal_length))\n",
+    "\n",
+    "\n",
+    "    # Check if the signal length matches the provided signal_length\n",
+    "    if len(signal) != signal_length:\n",
+    "        raise ValueError(\"Provided signal length does not match the actual length of the signal block.\")\n",
+    "    \n",
+    "    # Perform the Discrete Wavelet Transform (DWT)\n",
+    "    coeffs = pywt.wavedec(signal, wavelet_name)\n",
+    "\n",
+    "    # Flatten the list of coefficients to get a single array\n",
+    "    x_dwt = np.hstack(coeffs)\n",
+    "    \n",
+    "    return x_dwt\n",
+    "\n",
+    "# Compute the DWT coefficients of the signal block\n",
+    "x_dwt = compute_dwt_coefficients(signal_block, size)\n",
+    "\n",
+    "# Print the DWT coefficients\n",
+    "print(x_dwt)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Measurement matrix Φ\n",
+    "def generate_measurement_matrix(rows, cols):\n",
+    "    return np.random.choice([-1, 1], size=(rows, cols))\n",
+    "\n",
+    "\n",
+    "# Compress the signal\n",
+    "def compress_signal(signal_block, Phi, Psi):\n",
+    "\n",
+    "    # x = Ψ^H s\n",
+    "    sparse_representation = np.dot(np.conj(Psi.T), signal_block)\n",
+    "    \n",
+    "    # y = Φx\n",
+    "    compressed_signal = np.dot(Phi, sparse_representation)\n",
+    "    return compressed_signal\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "# Φ matrix\n",
+    "Phi = generate_measurement_matrix(rows, size)\n"
    ]
   }
  ],
