fixed dictionary: theoretical review of dwt done

--- a/dataReaderMITDB.ipynb
+++ b/dataReaderMITDB.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -345,8 +345,13 @@
     "    where exactly $k$ elements in $s$ are non-zero, and the remaining $n-k$ elements are zero.\n",
     "\n",
     "2. **Practical Sparsity (compressible signal)**:\n",
-    "    In real-world signals, exact sparsity is rare. Instead, signals are often **approximately sparse or compressible**, where $n-k$ coefficients are small but not exactly zero. In this case, while only $k$ elements are significantly large and carry most of the signal's information, the remaining $n-k$ elements have small, non-negligible values. This reflects the practical scenarios where signals contain some noise or other minor components.\n",
-    "\n",
+    "    In real-world signals, exact sparsity is rare. Instead, signals are often **approximately sparse or compressible**, where $n-k$ coefficients are small but not exactly zero. In this case, while only $k$ elements are significantly large and carry most of the signal's information, the remaining $n-k$ elements have small, non-negligible values. This reflects the practical scenarios where signals contain some noise or other minor components."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Sparse Representation of Signals\n",
     "\n",
     "\"Most natural signals, such as images and audio, are highly compressible. This compressibility means that, when the signal is written in an appropriate basis, only a few modes are active, thus reducing the number of values that must be stored for an accurate representation. In other words, a compressible signal $s \\in \\mathbb{R}^n$ may be written as a sparse vector $x \\in \\mathbb{R}^n$ (containing mostly zeros) in a transform basis $\\Psi \\in \\mathbb{C}^{n \\times n}$:\n",
@@ -360,9 +365,13 @@
     "*(Directly quoting: Data-Driven Science and Engineering: Machine Learning, Dynamical Systems, and Control by Steven L. Brunton and J. Nathan Kutz, Chapter 3.1: Sparsity and Compressed Sensing.\n",
     ")\n",
     "\n",
-    "NOTE: in general both signal and dictionary can be complex, we assume real valued signal, not to break generality we left the dictionary as complex valued. To be more clear: e.g. DFT is complex valued, while DCT is only real valued. Most of the times natural signals are real-valued, so it makes more sense to use DCT. (DFT is used usually for spectral analysis or other applications where complex coefficients are useful) \n",
-    "\n",
-    "\n",
+    "NOTE: in general both signal and dictionary can be complex, we assume real valued signal, not to break generality we left the dictionary as complex valued. To be more clear: e.g. DFT is complex valued, while DCT is only real valued. Most of the times natural signals are real-valued, so it makes more sense to use DCT. (DFT is used usually for spectral analysis or other applications where complex coefficients are useful) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Classic Transformation-Based Compression\n",
     "\n",
     "A typical transformation-based compression algorithm involves the following steps:\n",
@@ -389,8 +398,13 @@
     "\n",
     "<center>\n",
     "    <img src=\"./.img/MethodsComparison.png\" alt=\"MethodsComparison.png\" width=\"600\">\n",
-    "</center>\n",
-    "\n",
+    "</center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Compressed Sensing (CS) Based Compression\n",
     "\n",
     "**Compressed Sensing (CS)** is an advanced technique that allows for the acquisition and reconstruction of sparse signals by solving an underdetermined linear system. CS eliminates the need for a separate sparsification step and operates as follows:\n",
@@ -483,7 +497,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Wavelet basis\n",
+    "### Theoretical review\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Wavelet basis\n",
     "\n",
     "THEORY MISSING\n"
    ]
@@ -492,7 +513,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Best Choice of Wavelet Type for ECG Signal Processing\n",
+    "#### Best Choice of Wavelet Type for ECG Signal Processing\n",
     "\n",
     "When selecting a wavelet type for ECG signal processing, the choice largely depends on the specific application, such as noise reduction, feature extraction, or data compression. However, certain wavelets have shown to be particularly effective for ECG signals due to their similarity to ECG waveform characteristics. Below are some commonly used wavelet types:\n",
     "\n",
@@ -520,7 +541,7 @@
     "    - **Best for:** Simple applications requiring high computational efficiency.\n",
     "    - **Rationale:** Haar wavelets are simple and computationally efficient but may not capture subtle features as effectively as other wavelets. They are mainly used for applications where simplicity and speed are prioritized over detail.\n",
     "\n",
-    "#### Recommendation\n",
+    "__Recommendation__\n",
     "For most ECG processing tasks, **Daubechies wavelets** (particularly db4 or db6) are often the preferred choice due to their effective balance between capturing the necessary detail and computational efficiency. However, if your application requires more detailed feature extraction or noise reduction, you might consider Symlets or Coiflets. \n",
     "\n",
     "Always validate the choice of wavelet with your specific dataset and application to ensure optimal performance.\n"
@@ -530,12 +551,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Select signal block to compress\n"
+    "### Coding"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Select signal block to compress\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,17 +583,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 1: sparse representation\n",
+    "#### Step 1: sparse representation\n",
     "\n",
     "__Compressed sensing__ (recap in a nutshell)\n",
     "$$\n",
     "y = \\Phi x = \\Phi (\\Psi^H s)\n",
     "$$\n",
     "\n",
-    "__Sparse representation step__\n",
-    "$$\n",
-    "x = \\Psi^H s\n",
-    "$$\n",
+    "$s \\in \\mathbb{R}^n$, $\\Psi \\in \\mathbb{R}^{n*n}$, $\\Phi \\in \\mathbb{R}^{m*n}$, $y \\in \\mathbb{R}^m$\n",
+    "\n",
     "\n"
    ]
   },
@@ -573,83 +599,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__Naive implementation:__\n",
+    "__Sparse representation step__\n",
+    "$$\n",
+    "x = \\Psi^H s\n",
+    "$$\n",
     "\n",
-    "Naive implementation is to actually compute $\\Psi$ orthogonal wavelet basis matrix (fixed dictionary), compute hermitian conjugate $\\Psi^H$, at the end compute the dot product $x = \\Psi^H s$. This is __NOT__ computationally the best solution, as it is unnecessary to compute and store $\\Psi$ and unnecesary and potentiall really expensive to compute $\\Psi^H$."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 178,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-0.275 -0.27  -0.25  -0.25  -0.255 -0.225 -0.22  -0.205 -0.2   -0.205\n",
-      " -0.215 -0.23  -0.22  -0.225 -0.225 -0.225]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/franco/Dropbox/AA_Fra_Rosnati/B_Education/AA_University/AA_PoliMi/AA_Ing/01_Magistrale/HPC_engineering/1_sem_HPC/NAML/NAML_project/NAML_ECG_compressor/.namlVenv/lib/python3.8/site-packages/pywt/_multilevel.py:43: UserWarning: Level value of 4 is too high: all coefficients will experience boundary effects.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "import pywt\n",
+    "The correct method maight seem the following: compute the wavelet orthogonal basis matrix $\\Psi$, invert it and and apply it to the original \n",
+    "signal $\\Psi^H s$. This method is not efficient as it requires to compute a matrix (but it's not necessary as we're about to see) and \n",
+    "to invert it (computationally expensive task).\n",
     "\n",
-    "def generate_wavelet_basis_matrix(signal_length, wavelet_name='db4', levelsNum=None):\n",
+    "Instead of such approach the better way is to use directly the DWT to obtain obtain $x$ directly, which represents the signal in the sparse \n",
+    "domain generated by the wavelets.\n",
     "\n",
-    "    if levelsNum is None:\n",
-    "        levelsNum = int(np.log2(signal_length))\n",
+    "__Signal block__\n",
+    "\n",
+    "In our methods we will apply the DWT to the original signal $s \\in \\mathbb{R}^n$ dividing it in blocks of size $d$.\n",
+    "\n",
+    "Note that in our application, given original signal block $s_{block} \\in \\mathbb{R}^d$  we want to obtain $x_{block} \\in \\mathbb{R}^d$, so we need to obtain \n",
+    "exactly $d$ coefficients out of the DWT. This is obtained straightforward by using only __one level of dwt decomposition__.\n",
     "\n",
     "\n",
-    "    # Generate an identity matrix as the input signal for each basis vector\n",
-    "    identity_matrix = np.identity(signal_length)\n",
-    "    \n",
-    "    # Initialize a matrix to store the wavelet basis vectors\n",
-    "    basis_matrix = np.zeros((signal_length, signal_length))\n",
-    "    \n",
-    "    # Choose numb\n",
+    "__One level DWT__\n",
+    "When we apply the Discrete Wavelet Transform (DWT) to the original signal $s_{block} \\in \\mathbb{R}^d$, we decompose it into two sets \n",
+    "of coefficients: detail coefficients and approximation coefficients. Specifically, if we use a single level of DWT decomposition, \n",
+    "we will obtain $d/2$ detail coefficients associated with the high-frequency components of the signal and $d/2$ approximation coefficients \n",
+    "associated with the low-frequency components of the signal.\n",
     "\n",
-    "    # Perform the wavelet transform on each unit vector    \n",
-    "    for i in range(signal_length):\n",
-    "        coeffs = pywt.wavedec(identity_matrix[i], wavelet_name, level=levelsNum)\n",
-    "        \n",
-    "        # Reconstruct the basis vector from wavelet coefficients\n",
-    "        reconstructed_signal = pywt.waverec(coeffs, wavelet_name)\n",
-    "        \n",
-    "        # Store the reconstructed signal (which is a basis vector) in the matrix\n",
-    "        basis_matrix[i] = reconstructed_signal[:signal_length]  # trim to original length\n",
-    "    \n",
-    "    return basis_matrix\n",
+    "Thus, the $s_{block}$ can be represented in the sparse domain as:\n",
     "\n",
-    "# Generate Ψ\n",
-    "Psi = generate_wavelet_basis_matrix(size)\n",
+    "$$\n",
+    "\\text{DWT}(s_{block}) = \\{cA_{1}, cD_{1}\\}\n",
+    "$$\n",
     "\n",
-    "# Compute sparse representation of the signal\n",
-    "x_naive = np.dot(np.conj(Psi.T), signal_block)\n",
+    "where $cA_{1} \\in \\mathbb{R}^{d/2}$ are the approximation coefficients and $cD_{1} \\in \\mathbb{R}^{d/2}$ are the detail coefficients.\n",
     "\n",
+    "In our sparse representation, the vector $x_{block} \\in \\mathbb{R}^n$ is formed by __concatenating__ these coefficients:\n",
     "\n",
-    "print(x_naive)"
+    "$$\n",
+    "x_{block} = [cA_{1}, cD_{1}]\n",
+    "$$\n",
+    "\n",
+    "__Time information__\n",
+    "Both $cA_{1}, cD_{1}$ retain time-information of the original $s_{block}$. Meaning that they are still ordered in time. Creating an $x_{block}$ vector \n",
+    "by concatenating may seem counter-intuitive, because I will have $d/2$ coefficients ordered in time, followed by another $d/2$ coefficients \n",
+    "ordered in time. However, this is not a problem, because __the further CS step ( _measurement matrix application_ ) will combine information \n",
+    "from all $d$ coefficients into $d/4$ coefficients__. (We want to achieve a compression rate of $75\\%$)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__Computationally cheaper implementation:__\n"
+    "_If you want to further explore DWT and transforms in general refer to the \"Recap on transform\" in the documentation, section \"The study behind the project\" or any good Data Science book. (e.g. \"Data-Driven Science and Engineering: Machine Learning, Dynamical Systems, and Control. Steven L. Brunton, J. Nathan Kutz\")_ "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +672,10 @@
     }
    ],
    "source": [
-    "def compute_dwt_coefficients(signal, signal_length, wavelet_name='db4', levelsNum=None):\n",
+    "import pywt\n",
+    "import numpy as np\n",
+    "\n",
+    "def compute_dwt_coefficients(signal, signal_length, wavelet_name='db4', levelsNum=1):\n",
     "    \"\"\"\n",
     "    Computes the DWT coefficients for the given signal block.\n",
     "    \n",
@@ -678,10 +687,6 @@
     "    Returns:\n",
     "    - x_dwt: array-like, the DWT coefficients of the signal block\n",
     "    \"\"\"\n",
-    "\n",
-    "    if levelsNum is None:\n",
-    "        levelsNum = int(np.log2(signal_length))\n",
-    "\n",
     "\n",
     "    # Check if the signal length matches the provided signal_length\n",
     "    if len(signal) != signal_length:\n",
@@ -704,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
