jsut before merging 'dwt', and restart from scratch the code

--- a/dataReaderMITDB.ipynb
+++ b/dataReaderMITDB.ipynb
@@ -956,6 +956,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## PART VI: adaptive dictionary learning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## PART VII: recovery of signal"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Step bo in cui si calcola qualcosa"
    ]
   },
