new schedule ready

--- a/firstStudy.ipynb
+++ b/firstStudy.ipynb
@@ -11,7 +11,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Table of content"
+    "## Table of content\n",
+    "\n",
+    "- Goal of the project\n",
+    "\n",
+    "- PART I: MITDB data reader - WFDB library\n",
+    "    - MIT-BIH Arrhythmia Database\n",
+    "    - Step 1: Retrieving the Data Path\n",
+    "    - Step 2: Load the signal and annotations\n",
+    "    - Step 3: moving data to Pandas dataframe\n",
+    "\n",
+    "- PART II: visualize the ECG data\n",
+    "\n",
+    "- PART III (Theoretical): sparsity and compression\n",
+    "    - Understanding Sparsity\n",
+    "    - Sparse Representation of Signals\n",
+    "    - Classic Transformation-Based Compression\n",
+    "    - Compressed Sensing (CS) Based Compression\n",
+    "\n",
+    "- PART IV: evaluation metrics\n",
+    "    - Metrics to Assess the Accuracy of Reconstructed Signal\n",
+    "    - Quality Assessment Based on PRD and SNR\n",
+    "    - Metrics related code\n",
+    "\n",
+    "- PART V: fixed dictionary compressed sensing\n",
+    "    - The \"fixed dictionary\" method overview\n",
+    "    - Step 1: sparse representation\n",
+    "    - Step 2: measurement matrix\n",
+    "    - Step 3: concatenating compressed blocks\n",
+    "\n",
+    "- PART VI: adaptive dictionary learning\n",
+    "\n",
+    "- PART VII: recovery of signal\n",
+    "\n"
    ]
   },
   {
