finally understood that Phi is applied without transforming signal

--- a/CS-based_ECG_Compressor.ipynb
+++ b/CS-based_ECG_Compressor.ipynb
@@ -50,9 +50,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Theory: sparsity and compression\n",
-    "\n",
-    "TO BE WRITTEN"
+    "## Theory: sparsity and compression"
    ]
   },
   {
@@ -71,6 +69,24 @@
     "    - both previous point are related to _optimal choice of measurement matrix_, as it will be explained later\n",
     "- _accuracy_ through quantitive metrics: _PRD_, _SNR_\n",
     "    - especially important to evaulate different dictionaries adn different methods of reconstruction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Theory: measurement matrix"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TO BE WRITTEN\n",
+    "\n",
+    "Roadmap:\n",
+    "- Relation between $\\Phi$ dimension and speed of \"sensing phase\" (phase 2)\n",
+    "- Relation between randomicity and RIP property"
    ]
   },
   {
@@ -110,24 +126,6 @@
     "\n",
     "#### K-SVD\n",
     "TO BE WRITTEN"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Theory: measurement matrix"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "TO BE WRITTEN\n",
-    "\n",
-    "Roadmap:\n",
-    "- Relation between $\\Phi$ dimension and speed of \"sensing phase\" (phase 2)\n",
-    "- Relation between randomicity and RIP property"
    ]
   },
   {
@@ -225,6 +223,54 @@
     "- Code will be able to create the dictionary with one of the methods\n",
     "    - Fixed dictionaries: DCT, DWT, KL\n",
     "    - Adaptive Dictionary Learning: MOM, K-SVD\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pywt\n",
+    "\n",
+    "def create_wavelet_basis(N, wavelet_name='db4'):\n",
+    "    \"\"\"\n",
+    "    Create the wavelet basis matrix for a given signal dimension and wavelet type.\n",
+    "\n",
+    "    Parameters:\n",
+    "    N (int): The dimension of the signal.\n",
+    "    wavelet_name (str): The name of the wavelet (default is 'db4').\n",
+    "\n",
+    "    Returns:\n",
+    "    waveletBasis (ndarray): The combined basis matrix, where the first N/2 rows are the\n",
+    "                            approximation basis and the second N/2 rows are the detail basis.\n",
+    "    \"\"\"\n",
+    "    # Load the specified wavelet\n",
+    "    wavelet = pywt.Wavelet(wavelet_name)\n",
+    "    \n",
+    "    # Extract the scaling (low-pass) and wavelet (high-pass) filter coefficients\n",
+    "    h = wavelet.dec_lo\n",
+    "    g = wavelet.dec_hi\n",
+    "    \n",
+    "    # Length of the filter\n",
+    "    L = len(h)\n",
+    "    \n",
+    "    # Initialize matrices to store the basis vectors\n",
+    "    Phi = np.zeros((N//2, N))\n",
+    "    Psi = np.zeros((N//2, N))\n",
+    "    \n",
+    "    # Construct the approximation (Phi) and detail (Psi) basis matrices\n",
+    "    for i in range(N//2):\n",
+    "        Phi[i, i*2:i*2+L] = h\n",
+    "        Psi[i, i*2:i*2+L] = g\n",
+    "    \n",
+    "    # Combine Phi and Psi into a single matrix\n",
+    "    waveletBasis = np.vstack((Phi, Psi))\n",
+    "    \n",
+    "    return waveletBasis\n",
+    "\n",
     "\n"
    ]
   },
